Began work on translating syntax to java strings.